--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
                 </div>
                 <p>Discover our app</p>
                 <div class="app-store">
-                    <a href="#0"><img src="img/Google_Play.png" alt="Google_Play"></a>
-                    <a href="#0"><img src="img/AppStore.png" alt="AppStore"></a>
+                    <a href="https://play.google.com"><img src="img/Google_Play.png" alt="Google_Play"></a>
+                    <a href="https://www.apple.com/app-store"><img src="img/AppStore.png" alt="AppStore"></a>
                 </div>
             </div>
         </div>
